create_assign_user

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <title>Automated Marking Assistant</title>
-    <link rel="stylesheet" href="home.css">
+    <!--<link rel="stylesheet" href="home.css">-->
 </head>
 <body>
     <div class="center">
         <h1>Automated Marking Assistant</h1>
         <h2>Please select an option:</h2>
-        <button id="submit-assignment-btn">Submit Assignment</button>
-        <button id="review-feedback-btn">Review Generated Feedback</button>
-        <button id="edit-assignment-btn">Edit Assignment</button>
-
+        <input type="text" id="username-input" placeholder="Enter username">
+        <button id="assign-user-btn">Assign User</button>
+        <button id="create-user-btn">Create User</button>
+        <button id="submit-assignment-btn" hidden>Submit Assignment</button>
+        <button id="review-feedback-btn" hidden>Review Generated Feedback</button>
+        <button id="edit-assignment-btn" hidden>Edit Assignment</button>
         <div id="dropdowns">
             <select id="course-dropdown" hidden>
                 <option value="">Select Course</option>
@@ -24,8 +26,6 @@
             </select>
         </div>        
     </div>
-    
     <script src="../static/js/home.js"></script>
-
 </body>
 </html>
