Add Assignment Description

--- a/templates/display_assignment.html
+++ b/templates/display_assignment.html
@@ -8,6 +8,10 @@
     <h2 id="module-title"></h2>
     <h3 id="assignment-title"></h3>
 
+    <hr> <!-- This is the divider -->
+    <h2>Assignment Description:</h2>
+    <p id="assignment-description"></p>
+
     <script src="../static/js/display_assignment.js"></script>
 </body>
 </html>
