Assignment Details Added

--- a/templates/display_assignment.html
+++ b/templates/display_assignment.html
@@ -8,9 +8,11 @@
     <h2 id="module-title"></h2>
     <h3 id="assignment-title"></h3>
 
-    <hr> <!-- This is the divider -->
+    <hr> <!--divider-->
     <h2>Assignment Description:</h2>
     <p id="assignment-description"></p>
+    <hr>
+    <div id="task-details"></div>
 
     <script src="../static/js/display_assignment.js"></script>
 </body>
