fixed database discrepencies.

--- a/templates/display_assignment.html
+++ b/templates/display_assignment.html
@@ -5,12 +5,13 @@
     <script src="../static/js/display_assignment.js"></script>
 </head>
 <body>
-    <h1 id="courseName"></h1>
-    <h2 id="moduleName"></h2>
-    <h2 id="assignmentName"></h2>
-    <p id="assignmentText"></p>
+    <h1 id="course-name"></h1>
+    <h2 id="module-name"></h2>
+    <h3 id="assignment-name"></h3>
 
-    <div id="taskContainer"></div>
+    <hr> <!-- This is the divider -->
+    <h2>Assignment Description:</h2>
+    <p id="assignment-text"></p>
 
     <button onclick="submitResponses()">Submit</button>
 </body>
