Added Task Details

--- a/templates/display_assignment.html
+++ b/templates/display_assignment.html
@@ -13,6 +13,8 @@
     <h2>Assignment Description:</h2>
     <p id="assignment-text"></p>
 
+    <div id="tasks"></div>
+
     <button onclick="submitResponses()">Submit</button>
 </body>
 </html>
