Adding responses to database

--- a/templates/display_assignment.html
+++ b/templates/display_assignment.html
@@ -9,12 +9,13 @@
     <h2 id="module-name"></h2>
     <h3 id="assignment-name"></h3>
 
-    <hr> <!-- This is the divider -->
+    <hr>
     <h2>Assignment Description:</h2>
     <p id="assignment-text"></p>
 
     <div id="tasks"></div>
 
+    <button onclick="saveResponses()">Save Responses</button>
     <button onclick="submitResponses()">Submit</button>
 </body>
 </html>
